--- a/web/index.html
+++ b/web/index.html
@@ -10,9 +10,43 @@
     <link rel="stylesheet" href="assets/css/app.min.css">
 </head>
 <body>
+<header class="default">
+    <div class="container">
+
+        <div class="row">
+            <div class="box col m1">1</div>
+            <div class="box col m1">2</div>
+            <div class="box col m1">3</div>
+            <div class="box col m1">4</div>
+            <div class="box col m1">5</div>
+            <div class="box col m1">6</div>
+            <div class="box col m1">7</div>
+            <div class="box col m1">8</div>
+            <div class="box col m1">9</div>
+            <div class="box col m1">10</div>
+            <div class="box col m1">11</div>
+            <div class="box col m1">12</div>
+        </div>
+
+        <div class="row">
+            <div class="box col l3 m6 s12">1</div>
+            <div class="box col l3 m6 s12">2</div>
+            <div class="box col l3 m6 s12">3</div>
+            <div class="box col l3 m6 s12">4</div>
+        </div>
+
+        <div class="row">
+            <div class="box col s12">1</div>
+            <div class="box col s6 offset-s6">2 (With a offset of 6 columns</div>
+        </div>
 
 
-<h1>TEST</h1>
+        <div class="row">
+            <div class="box col s7 push-s5">This div is 7-columns wide on pushed to the right by 5-columns.</div>
+            <div class="box col s5 pull-s7">5-columns wide pulled to the left by 7-columns.</div>
+        </div>
+    </div>
+</header>
 
 </body>
 </html>
